GPU Codegen crash when loading demo file #97984

Closed
opened 2022-05-09 16:14:55 +02:00 by Julian Eisel · 4 comments
Member

System Information
Operating system: Linux-5.17.5-76051705-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD Radeon Vega Frontier Edition (vega10, LLVM 13.0.1, DRM 3.44, 5.17.5-76051705-generic) AMD 4.6 (Core Profile) Mesa 22.0.1

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, hash: 865cdff426

Short description of error
Null-pointer dereference when opening the Ellie Pose Library demo file. Probably caused by 0f7da9a72f.

The error appears in GPUCodegen::generate_resource, where info.name_buffer is accessed for appending, but it's null.

    1   blender::Vector<std::array<char, 32ul>, 16l, blender::GuardedAllocator>::ensure_space_for_one                     BLI_vector.hh         951  0x1ad3d893 
    2   blender::Vector<std::array<char, 32ul>, 16l, blender::GuardedAllocator>::append_as<std::array<char, 32ul> const&> BLI_vector.hh         444  0x1ad3cddd 
    3   blender::Vector<std::array<char, 32ul>, 16l, blender::GuardedAllocator>::append                                   BLI_vector.hh         435  0x1ad3c590 
    4   GPUCodegenCreateInfo::NameBuffer::append_sampler_name                                                             gpu_codegen.cc        68   0x1ad38e8f 
    5   GPUCodegen::generate_resources                                                                                    gpu_codegen.cc        360  0x1ad29ee4 
    6   GPU_generate_pass                                                                                                 gpu_codegen.cc        611  0x1ad2fcb4 
    7   GPU_material_from_nodetree                                                                                        gpu_material.c        688  0x1ad84d66 
    8   DRW_shader_from_material                                                                                          draw_manager_shader.c 399  0xb63206f  
    9   eevee_material_get_ex                                                                                             eevee_shaders.c       1458 0xb748651  
    10  EEVEE_material_get                                                                                                eevee_shaders.c       1487 0xb748b41  
    11  material_opaque                                                                                                   eevee_materials.c     605  0xb70bf37  
    12  eevee_material_cache_get                                                                                          eevee_materials.c     769  0xb70ef25  
    13  EEVEE_materials_cache_populate                                                                                    eevee_materials.c     814  0xb70ef25  
    14  EEVEE_cache_populate                                                                                              eevee_engine.c        113  0xb67cce6  
    15  drw_engines_cache_populate                                                                                        draw_manager.c        1062 0xb4f30bd  
    16  DRW_draw_render_loop_ex                                                                                           draw_manager.c        1683 0xb4f92e1  
    17  DRW_draw_view                                                                                                     draw_manager.c        1593 0xb4f8331  
    18  view3d_draw_view                                                                                                  view3d_draw.c         1540 0x1038db64 
    19  view3d_main_region_draw                                                                                           view3d_draw.c         1562 0x1038dcf9 
    20  ED_region_do_draw                                                                                                 area.c                542  0xccac98f  
    ... <More>                                                                                                                                                  

Exact steps for others to reproduce the error

**System Information** Operating system: Linux-5.17.5-76051705-generic-x86_64-with-glibc2.35 64 Bits Graphics card: AMD Radeon Vega Frontier Edition (vega10, LLVM 13.0.1, DRM 3.44, 5.17.5-76051705-generic) AMD 4.6 (Core Profile) Mesa 22.0.1 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, hash: `865cdff426` **Short description of error** Null-pointer dereference when opening the Ellie Pose Library demo file. Probably caused by 0f7da9a72f. The error appears in `GPUCodegen::generate_resource`, where `info.name_buffer` is accessed for appending, but it's null. ```lines=10 1 blender::Vector<std::array<char, 32ul>, 16l, blender::GuardedAllocator>::ensure_space_for_one BLI_vector.hh 951 0x1ad3d893 2 blender::Vector<std::array<char, 32ul>, 16l, blender::GuardedAllocator>::append_as<std::array<char, 32ul> const&> BLI_vector.hh 444 0x1ad3cddd 3 blender::Vector<std::array<char, 32ul>, 16l, blender::GuardedAllocator>::append BLI_vector.hh 435 0x1ad3c590 4 GPUCodegenCreateInfo::NameBuffer::append_sampler_name gpu_codegen.cc 68 0x1ad38e8f 5 GPUCodegen::generate_resources gpu_codegen.cc 360 0x1ad29ee4 6 GPU_generate_pass gpu_codegen.cc 611 0x1ad2fcb4 7 GPU_material_from_nodetree gpu_material.c 688 0x1ad84d66 8 DRW_shader_from_material draw_manager_shader.c 399 0xb63206f 9 eevee_material_get_ex eevee_shaders.c 1458 0xb748651 10 EEVEE_material_get eevee_shaders.c 1487 0xb748b41 11 material_opaque eevee_materials.c 605 0xb70bf37 12 eevee_material_cache_get eevee_materials.c 769 0xb70ef25 13 EEVEE_materials_cache_populate eevee_materials.c 814 0xb70ef25 14 EEVEE_cache_populate eevee_engine.c 113 0xb67cce6 15 drw_engines_cache_populate draw_manager.c 1062 0xb4f30bd 16 DRW_draw_render_loop_ex draw_manager.c 1683 0xb4f92e1 17 DRW_draw_view draw_manager.c 1593 0xb4f8331 18 view3d_draw_view view3d_draw.c 1540 0x1038db64 19 view3d_main_region_draw view3d_draw.c 1562 0x1038dcf9 20 ED_region_do_draw area.c 542 0xccac98f ... <More> ``` **Exact steps for others to reproduce the error** * Download the Elli Pose Library demo file: https://www.blender.org/download/demo-files/ * Open it :)
Author
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by 6e2b0a38f0

This issue was referenced by 6e2b0a38f0cbf2234cfacd0595c16e577d5e8a6c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Clément Foucault self-assigned this 2022-05-09 20:07:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97984
No description provided.