Fix T97984: GPUCodegen: crash when loading demo file

This was caused by the name buffer not being ensured in all cases.

Change the behavior and always create the `NameBuffer`.